--- a/public/demo-without-citefrombib.html
+++ b/public/demo-without-citefrombib.html
@@ -19,9 +19,8 @@
   <body>
     <div>
       I am going to cite <bib-cite ref="lui2020bayesian"/></bib-cite> right now.
-      Now I cite <bib-citep ref="advi"/></bib-citep>.
+      Now I cite <bib-cite ref="advi"/></bib-cite>.
     </div>
-    hello
   </body>
 
   <script>
