--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <title>Test citefrombib</title>
   </head>
   <body>
-    <script src="./main.js"></script>
+    <script src="./citefrombib.js"></script>
   </body>
 </html>
