--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,6 @@
     <title>Test citefrombib</title>
   </head>
   <body>
-    <script src="./citefrombib.js"></script>
+    <script src="citefrombib.min.js"></script>
   </body>
 </html>
