Okay, this is mostly working.

--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,18 @@
     <title>Test citefrombib</title>
   </head>
   <body>
-    <script src="citefrombib.min.js"></script>
+    <div>
+      NOT ME
+      <p>
+      I am going to cite <param cite="lui2020bayesian"> right now.
+      Now I cite <param cite="advi"> here. ADVI was cool <param citep="advi">.
+      I am going to cite <param cite="lui2020bayesian"> right now.
+      Now I cite <param cite="advi"> here. ADVI was cool <param citep="advi">.
+      I am going to cite <param cite="lui2020bayesian"> right now.
+      Now I cite <param cite="advi"> here. ADVI was cool <param citep="advi">.
+      </p>
+    </div>
+    <h2>References</h2>
+    <div bibliography="bib.json"></div>
   </body>
 </html>
