--- a/more-examples/basic/index.html
+++ b/more-examples/basic/index.html
@@ -1,76 +1,47 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <style>
-.mySlides {
-  display:none;
+.slide-deck {
+   background-color: lightgrey;
+   width: 90vw;
+   height: 45vw;
+   margin: auto;
+   margin-top: 1vw;
+   margin-bottom: 1vw;
 }
-.container {
-  position: relative;
-  width: 80%;
-  margin: auto;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio */
-  background-color: grey;
+
+section {
+   padding:1vw;
+   font-size: 2vw;
+   color: black;
 }
-.text {
-   position:  absolute;
-   top: 0;
-   left: 0;
-   bottom: 0;
-   right: 0;
-   text-align: left;
-   font-size: 1vw;
-   color: white;
-}
+
 </style>
+</head>
 <body>
 
-  <h2 class="w3-center">Manual Slideshow</h2>
-
-  <div class="container center">
-    <div class="mySlides text" style="margin-left:5em; margin-right:5em">
-      <h1>Hello world!</h1>
-      <h1>Hello world!</h1>
-      <h1>Hello world!</h1>
-      <h1>Hello world!</h1>
-      <h1>Hello world!</h1>
-      <h1>Hello world!</h1>
-      <h1>Hello world!</h1>
-    </div>
-
-    <div class="mySlides">
-      <h1>Hello world!</h1>
-      <h1>Hello world!</h1>
-      <h1>Hello world!</h1>
-    </div>
-  </div>
-
-  <div>
-    <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-    <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-  </div>
-
-  <script>
-    var slideIndex = 1;
-    showDivs(slideIndex);
-
-    function plusDivs(n) {
-      showDivs(slideIndex += n);
-    }
-
-    function showDivs(n) {
-      var i;
-      var x = document.getElementsByClassName("mySlides");
-      if (n > x.length) {slideIndex = 1}
-      if (n < 1) {slideIndex = x.length}
-      for (i = 0; i < x.length; i++) {
-        x[i].style.display = "none";  
-      }
-      x[slideIndex-1].style.display = "block";  
-  }
-  </script>
+<div class="slide-deck"> 
+  <section>
+    <h1>Here is a title</h1>
+    <p>1. 16:9 Aspect ratio</p>
+    <p>2. 16:9 Aspect ratio</p>
+    <p>3. 16:9 Aspect ratio</p>
+    <p>4. 16:9 Aspect ratio</p>
+    <p>5. 16:9 Aspect ratio</p>
+    <p>6. 16:9 Aspect ratio</p>
+    <p>7. 16:9 Aspect ratio</p>
+    <p>8. 16:9 Aspect ratio</p>
+    <p>9. 16:9 Aspect ratio</p>
+    <p>10. 16:9 Aspect ratio</p>
+    <p>11. 16:9 Aspect ratio</p>
+    <p>12. 16:9 Aspect ratio</p>
+    <p>13. 16:9 Aspect ratio</p>
+    <p>14. 16:9 Aspect ratio</p>
+  </section> 
+</div>
 
 </body>
 </html>
