added simple example

--- a/more-examples/basic/index.html
+++ b/more-examples/basic/index.html
@@ -1,47 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<style>
-.slide-deck {
-   background-color: lightgrey;
-   width: 90vw;
-   height: 45vw;
-   margin: auto;
-   margin-top: 1vw;
-   margin-bottom: 1vw;
-}
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap" rel="stylesheet">
 
-section {
-   padding:1vw;
-   font-size: 2vw;
-   color: black;
-}
-
-</style>
+  <!-- styles -->
+  <link rel="stylesheet" href="assets/css/basic.css">
 </head>
 <body>
-
-<div class="slide-deck"> 
-  <section>
-    <h1>Here is a title</h1>
-    <p>1. 16:9 Aspect ratio</p>
-    <p>2. 16:9 Aspect ratio</p>
-    <p>3. 16:9 Aspect ratio</p>
-    <p>4. 16:9 Aspect ratio</p>
-    <p>5. 16:9 Aspect ratio</p>
-    <p>6. 16:9 Aspect ratio</p>
-    <p>7. 16:9 Aspect ratio</p>
-    <p>8. 16:9 Aspect ratio</p>
-    <p>9. 16:9 Aspect ratio</p>
-    <p>10. 16:9 Aspect ratio</p>
-    <p>11. 16:9 Aspect ratio</p>
-    <p>12. 16:9 Aspect ratio</p>
-    <p>13. 16:9 Aspect ratio</p>
-    <p>14. 16:9 Aspect ratio</p>
-  </section> 
-</div>
-
+  <div class="slide-deck"> 
+    <section>
+      <h1 class="title-slide">Bayesian Modeling for Heterogeneous Multivariate Data</h1>
+      <p>
+      Arthur Lui
+      </p>
+    </section> 
+  </div>
 </body>
 </html>
+
+<!-- TODO
+  Implement transition button.
+-->
