--- a/demo/index.html
+++ b/demo/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Test citefrombib</title>
+    <script src="citefrombib.min.js"></script>
   </head>
   <body>
     <div>
-      NOT ME
+      NOT ME!
       <p>
       I am going to cite <param cite="lui2020bayesian"> right now.
       Now I cite <param cite="advi"> here. ADVI was cool <param citep="advi">.
@@ -18,5 +19,7 @@
     </div>
     <h2>References</h2>
     <div bibliography="bib.json"></div>
+    <script>citefrombib.make()</script>
+  </body>
   </body>
 </html>
