--- a/more-examples/basic/index.html
+++ b/more-examples/basic/index.html
@@ -7,21 +7,129 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- styles -->
+  <!------ styles ------->
+  <!-- custom -->
   <link rel="stylesheet" href="assets/css/basic.css">
+  <!-- KaTeX -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css">
+
 </head>
 <body>
-  <div class="slide-deck"> 
+  <div class="slide-deck hint"> 
     <section>
       <h1 class="title-slide">Bayesian Modeling for Heterogeneous Multivariate Data</h1>
-      <p>
+      <br>
       Arthur Lui
-      </p>
+      <br>
+      Advisor: Juhee Lee
+      <br>
+      Department of Statistics
     </section> 
+
+    <section>
+      <h1>Here's a title</h1>
+        Now I will cite <param cite="lui2020bayesian">.
+        Now I will cite <param cite="ari">.
+        Now I will cite <param cite="azzalini2003distributions">.
+        Cite <param cite="barnard2000modeling">.
+        Now I will cite <param cite="lui2020bayesian">.
+        Now I will cite <param cite="ari">.
+        Now I will cite <param cite="azzalini2003distributions">.
+        Cite <param cite="barnard2000modeling">.
+        Now I will cite <param cite="lui2020bayesian">.
+        Now I will cite <param cite="ari">.
+        Now I will cite <param cite="azzalini2003distributions">.
+        Cite <param cite="barnard2000modeling">.
+    </section> 
+
+    <section>
+      $\alpha + \beta = 1$.
+      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
+      Here's some text.  Here's some text.  Here's some text.  Here's some
+      text.  Here's some text.
+      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
+      Here's some text.  Here's some text.  Here's some text.  Here's some
+      text.  Here's some text.
+      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
+      Here's some text.  Here's some text.  Here's some text.  Here's some
+      text.  Here's some text.
+      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
+      Here's some text.  Here's some text.  Here's some text.  Here's some
+      text.  Here's some text.
+      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
+      Here's some text.  Here's some text.  Here's some text.  Here's some
+      text.  Here's some text.
+      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
+      Here's some text.  Here's some text.  Here's some text.  Here's some
+      text.  Here's some text.
+    </section> 
+
+    <section>
+      <h1>Math</h1>
+      $$
+      \begin{aligned}
+      \int_{0}^\infty f(x) dx &=& 1 \\
+      \alpha &\sim& \text{Normal}(0, 1)
+      \end{aligned}
+      $$
+    </section>
+
+    <section>
+      <h1>References</h1>
+      <div bibliography="assets/data/bib.json"></div>
+    </section>
+
+    <div class="backup-slides">
+      <section>
+        Here is something more.
+      </section>
+
+      <section>
+        I hope the counter hasn't gone crazy.
+      </section>
+
+      <section>
+        <h1>Here's a picture</h1>
+        <figure class="center">
+          <img src="assets/img/mondrian-bball.jpg">
+          <figcaption>Just another day in the neighborhood o o o o o o.</figcaption>
+        </figure>
+      </section>
+    </div>
   </div>
+
+  <!------------------ scripts ----------------------------------->
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <!-- citefrombib -->
+  <script src="assets/js/citefrombib.min.js"></script>
+  <script>citefrombib.make()</script>
+  <!-- pager -->
+  <script type="module" src="assets/js/index.js"></script>
+  <!-- KaTeX -->
+  <!-- The loading of KaTeX is deferred to speed up page rendering -->
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js"></script>
+  <!-- To automatically render math in text elements, include the auto-render extension: -->
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js"
+      onload="renderMathInElement(document.body);"></script>
+  <script>
+  $(document).ready(function () { // this need jquery
+    renderMathInElement(document.body, {
+      // ...options...
+      delimiters: [
+        { left: "$$", right: "$$", display: true },
+        { left: "$", right: "$", display: false },
+        { left: "\\[", right: "\\]", display: true }
+      ]
+    });
+  });
+  </script>
 </body>
 </html>
 
-<!-- TODO
-  Implement transition button.
+<!-- TODO: 
+  - Mathjax / katex
+  - code syntax highlight
+  - Handle printing. 
+  - set a url parameter?
 -->
