added ability to stay at page.

--- a/more-examples/dissertation/index.html
+++ b/more-examples/dissertation/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
   <div class="slide-deck">  <!-- when developing, add class="hint" to see box around .slide-deck-->
+    <!-- TITLE SLIDE -->
     <section>
       <h1 class="title-slide">Bayesian Modeling for Heterogeneous Multivariate Data</h1>
       <br>
@@ -35,74 +36,33 @@
       </small>
     </section> 
 
+    <!-- Project 1 -->
     <section>
-      <h1>Here's a title</h1>
-        Now I will cite <param cite="lui2020bayesian">.
-        Now I will cite <param cite="ari">.
-        Now I will cite <param cite="azzalini2003distributions">.
-        Cite <param cite="barnard2000modeling">.
-        Now I will cite <param cite="lui2020bayesian">.
-        Now I will cite <param cite="ari">.
-        Now I will cite <param cite="azzalini2003distributions">.
-        Cite <param cite="barnard2000modeling">.
-        Now I will cite <param cite="lui2020bayesian">.
-        Now I will cite <param cite="ari">.
-        Now I will cite <param cite="azzalini2003distributions">.
-        Cite <param cite="barnard2000modeling">.
-    </section> 
-
-    <section>
-      $\alpha + \beta = 1$.
-      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
-      Here's some text.  Here's some text.  Here's some text.  Here's some
-      text.  Here's some text.
-      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
-      Here's some text.  Here's some text.  Here's some text.  Here's some
-      text.  Here's some text.
-      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
-      Here's some text.  Here's some text.  Here's some text.  Here's some
-      text.  Here's some text.
-      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
-      Here's some text.  Here's some text.  Here's some text.  Here's some
-      text.  Here's some text.
-      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
-      Here's some text.  Here's some text.  Here's some text.  Here's some
-      text.  Here's some text.
-      Some other text. Blablabl abl abl abl bal bal b.  Here's some text.
-      Here's some text.  Here's some text.  Here's some text.  Here's some
-      text.  Here's some text.
-    </section> 
-
-    <section>
-      <h1>Math</h1>
-      $$
-      \begin{aligned}
-      \int_{0}^\infty f(x) dx &= 1 \\
-      \alpha &\sim \text{Normal}(0, 1)
-      \end{aligned}
-      $$
+      <br>
+      <br>
+      <h1 class="title-slide">
+        A Bayesian Feature Allocatio Model for Identifying Cell Subpopulations
+        Using Cytometry Data
+      </h1>
+      <br>
+      <hr>
     </section>
 
+    <section>
+      <h1>Introduction</h1>
+    </section>
+
+
+    <!-- REFERENCES -->
     <section>
       <h1>References</h1>
       <div bibliography="assets/data/bib.json"></div>
     </section>
 
+    <!-- BACKUP SLIDES-->
     <div class="backup-slides">
       <section>
         Here is something more.
-      </section>
-
-      <section>
-        I hope the counter hasn't gone crazy.
-      </section>
-
-      <section>
-        <h1>Here's a picture</h1>
-        <figure class="center">
-          <img src="assets/img/mondrian-bball.jpg">
-          <figcaption>Just another day in the neighborhood o o o o o o.</figcaption>
-        </figure>
       </section>
     </div>
   </div>
