OK. That was fun. The hard part is getting tables.
Mathjax would probably work. But would be a hair slower.

--- a/more-examples/dissertation/index.html
+++ b/more-examples/dissertation/index.html
@@ -49,7 +49,74 @@
     </section>
 
     <section>
-      <h1>Introduction</h1>
+      <h1>Cytometry at time-of-flight (CyTOF) </h1>
+      <ul>
+        <li> Commercialized in 2009 </li>
+        <li> Makes use of time-of-flight spectrometry to accelerate, separate,
+          and identify ions by mass</li>
+        <li> Enables detection of many parameters (biological, phenotypic, or
+          functional markers) in less time and at a higher resolution <param
+          citep="cheung2011screening"></li>
+        <li>Led to greater understanding of natural killer (NK) cells</li>
+      </ul>
+    </section>
+
+    <section>
+      <h1>Natural Killer Cells </h1>
+      <ul>
+        <li> Natural Killer cells play a critical role in cancer
+          immunosurveillance. </li>
+        <li> NK cell diversity affects antiviral response. </li>
+        <li> Drs. Thall and Rezvani, at MD Anderson Cancer Center, have
+          conducted clinical trials to study the potential clinical efficacy of
+          umbilical cord blood (UCB) transplantation as a therapy for leukemia.
+        </li>
+        <li> UCB NK cell therapy has the advantage of low risk of viral
+          transmission from donor to recipient [Sarvaria et al., 2017]. </li>
+        <li> In the trials, leukemia patients received UCB cell transplants,
+          and NK cell surface markers are measured using mass cytometry. </li>
+      </ul>
+    </section>
+
+    <section>
+      <table>
+        <tr>
+          <td></td> <td>2B4</td> <td>2DL1</td> <td>2DL3</td> <td>2DS4</td>
+          <td>3DL1</td> <td>CCR7</td> <td>$\cdots$</td>
+        </tr>
+        <tr>
+          <td>1</td> <td>47.60</td> <td>0.00</td> <td>30.90</td>
+          <td>1.35</td> <td>82.49</td> <td>0.00</td> <td>$\cdots$</td>
+        </tr>
+        <tr>
+          <td>2</td> <td>81.84</td> <td>0.44</td> <td>0.88</td>
+          <td>0.51</td> <td>176.99</td> <td>2.38</td> <td>$\cdots$</td>
+        </tr>
+        <tr>
+          <td>3</td> <td>13.33</td> <td>0.00</td> <td>0.00</td>
+          <td>0.00</td> <td>0.00</td> <td>8.81</td> <td>$\cdots$</td>
+        </tr>
+        <tr>
+          <td>4</td> <td>23.64</td> <td>3.37</td> <td>43.39</td>
+          <td>0.27</td> <td>0.73</td> <td>0.00</td> <td>$\cdots$</td>
+        </tr>
+        <tr>
+          <td>5</td> <td>156.19</td> <td>0.00</td> <td>9.04</td>
+          <td>0.00</td> <td>0.00</td> <td>11.43</td> <td>$\cdots$</td>
+        </tr>
+        <tr>
+          <td>6</td> <td>273.86</td> <td>0.00</td> <td>9.71</td>
+          <td>2.41</td> <td>0.84</td> <td>0.52</td> <td>$\cdots$</td>
+        </tr>
+        <tr>
+          <td>$\vdots$</td> <td>$\vdots$</td> <td>$\vdots$</td> <td>$\vdots$</td>
+          <td>$\vdots$</td> <td>$\vdots$</td> <td>$\vdots$</td> <td></td>
+        </tr>
+        <tr>
+          <td>Cutoff</td> <td>7.62</td> <td>6.07</td> <td>13.60</td>
+          <td>3.79</td> <td>15.50</td> <td>9.52</td> <td>$\cdots$</td>
+        </tr>
+      </table>
     </section>
 
 
