--- a/more-examples/dissertation/index.html
+++ b/more-examples/dissertation/index.html
@@ -6,15 +6,12 @@
 
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=News+Cycle:wght@300,400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,400;700&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap" rel="stylesheet">
   <!------ styles ------->
   <!-- custom -->
   <link rel="stylesheet" href="assets/css/basic.css">
   <!-- KaTeX -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css">
-
 </head>
 <body>
   <div class="slide-deck hint">  <!-- when developing, add class="hint" to see box around .slide-deck-->
@@ -79,8 +76,10 @@
     </section>
 
     <section>
-      <figure class="center" style="width:70%">
-        <img src="assets/img/fam/cb-data.png" style="width:100%">
+      <h1> CyTOF Data </h1>
+      <!-- https://docs.google.com/spreadsheets/d/1_eJHC6sx0NcCIs79hbd6cgyk9Xm03Y_binlRg__ET5E/edit#gid=0 -->
+      <figure class="center" style="width:60%">
+        <img src="assets/img/fam/cb-data-1.png" style="width:100%">
         <figcaption>Cord-blood sample marker expression levels for 6 of 32
           NK-cell markers (columns), and 6 of 41474 cells (rows). Last row
           contains cutoff values returned by CyTOF instrument.</figcaption>
