--- a/more-examples/dissertation/index.html
+++ b/more-examples/dissertation/index.html
@@ -37,10 +37,10 @@
     <section>
       <br>
       <br>
-      <h1 class="title-slide">
-        A Bayesian Feature Allocatio Model for Identifying Cell Subpopulations
+      <h2 class="title-slide">
+        A Bayesian Feature Allocation Model for Identifying Cell Subpopulations
         Using Cytometry Data
-      </h1>
+      </h2>
       <br>
       <hr>
     </section>
@@ -57,7 +57,6 @@
         <li>Led to greater understanding of natural killer (NK) cells</li>
       </ul>
     </section>
-
     <section>
       <h1>Natural Killer Cells </h1>
       <ul class="far">
@@ -69,7 +68,7 @@
           umbilical cord blood (UCB) transplantation as a therapy for leukemia.
         </li>
         <li> UCB NK cell therapy has the advantage of low risk of viral
-          transmission from donor to recipient [Sarvaria et al., 2017]. </li>
+          transmission from donor to recipient <param citep="sarvaria2017umbilical">. </li>
         <li> In the trials, leukemia patients received UCB cell transplants,
           and NK cell surface markers are measured using mass cytometry. </li>
       </ul>
@@ -77,13 +76,14 @@
 
     <section>
       <h1> CyTOF Data </h1>
-      <!-- https://docs.google.com/spreadsheets/d/1_eJHC6sx0NcCIs79hbd6cgyk9Xm03Y_binlRg__ET5E/edit#gid=0 -->
+      <a href="https://docs.google.com/spreadsheets/d/1_eJHC6sx0NcCIs79hbd6cgyk9Xm03Y_binlRg__ET5E/edit#gid=0">
       <figure class="center" style="width:60%">
-        <img src="assets/img/fam/cb-data-1.png" style="width:100%">
-        <figcaption>Cord-blood sample marker expression levels for 6 of 32
+        <img src="assets/img/fam/fam-table1.svg" style="width:100%">
+        <figcaption>Table 1: Cord-blood sample marker expression levels for 6 of 32
           NK-cell markers (columns), and 6 of 41474 cells (rows). Last row
           contains cutoff values returned by CyTOF instrument.</figcaption>
       </figure>
+      </a>
       <ul class="med">
         <li>Data missing not at random</li>
         <ul>
